src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

html {
  --scroll-behavior: smooth !important;
  scroll-behavior: smooth !important;
  scroll-snap-type: y mandatory;
  scrollbar-gutter: stable both-edges;
}

hr {
  border: none;
}

main {
  @apply transition-[opacity,transform,filter] duration-500 ease-in-out;
}

#body {
  --removed-body-scroll-bar-size: 10px !important;
}

body {
  @apply [&>#sections-menu]:data-[scroll-locked]:right-[26px];
}

@layer components {
  .link {
    @apply w-fit border-b-2 border-transparent hover:border-primary transition-all flex gap-3 items-center;
  }

  .floating {
    @apply text-white size-12 p-1 fixed z-20 bottom-6 right-6 transition-all duration-500;
  }

  .embla {
    @apply max-w-full;
  }

  .embla__viewport {
    @apply overflow-x-hidden relative w-full flex flex-col items-center justify-center gap-6;
  }

  .embla__container {
    @apply flex w-full;
  }

  .embla__slide {
    @apply flex flex-col justify-center items-center min-w-fit px-4;
  }

  .embla__slide__content {
    @apply flex flex-col justify-center items-center min-w-fit relative;
  }

  .embla__controls {
    @apply flex items-center justify-center mt-4 mx-4 gap-4;
  }

  .embla__dots {
    margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
    @apply flex flex-wrap justify-center items-center;
  }

  .embla__dot {
    -webkit-tap-highlight-color: #1b1b1b50;
    -webkit-appearance: none;
    @apply appearance-none rounded-full justify-center items-center h-8 w-8 m-0 p-0 border-none cursor-pointer inline-flex touch-manipulation bg-transparent;
  }

  .embla__dot:after {
    box-shadow: inset 10px 0 0 0.2rem #b3b3b3;
    @apply content-[""] flex items-center rounded-full h-3 w-3;
  }

  .embla__dot--selected:after {
    box-shadow: inset 10px 0 0 0.2rem #007aff;
  }
}

@layer utilities {
  .max-w-default {
    @apply max-w-[1244px];
  }

  .px-default {
    @apply px-4 xs:px-8;
  }

  .page-transition {
    @apply !opacity-0 !-translate-x-[100vw] !blur-md;
  }
}

::-webkit-scrollbar {
  @apply flex touch-none select-none z-20 h-full w-2.5;
}

::-webkit-scrollbar-track {
  @apply hidden;
}

::-webkit-scrollbar-thumb {
  @apply relative flex-1 rounded-full transition-all ease-in-out bg-zinc-200 hover:bg-zinc-400;
}

